--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
+    "express": "^4.17.1",
     "lodash": "^4.17.15",
     "mkdirp": "^0.5.1",
     "node-media-server": "^2.2.2",
     "nodemon": "^2.0.2",
+    "path": "^0.12.7",
     "pm2": "^4.2.3"
   },
   "scripts": {
     "start": "./node_modules/.bin/pm2 start src/index.js --name=node-node-rtmp-hls",
+    "stop": "./node_modules/.bin/pm2 stop node-node-rtmp-hls",
     "start:dev": "./node_modules/.bin/nodemon src/index.js"
   }
 }
