--- a/conf/stream.conf
+++ b/conf/stream.conf
@@ -2,10 +2,12 @@ server {
     listen 80;
     server_name kif2020.kiranamegatara.com;
 
-    location /admin(/.*)$ {
-        rewrite ^ $1 break;
-        proxy_set_header   X-Forwarded-For $remote_addr;
-        proxy_set_header   Host $http_host;
-        proxy_pass         http://localhost:8000/admin$1;
+    location / {
+        proxy_pass http://localhost:8080;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 }
