--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "node-media-server": "^2.2.2",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
-    "pm2": "^4.2.3"
+    "pm2": "^4.2.3",
+    "postcss-cli": "^7.1.1",
+    "tailwindcss": "^1.6.2"
   },
   "scripts": {
+    "build:css": "postcss public/stylesheets/tailwind.css -o public/stylesheets/style.css",
     "start": "./node_modules/.bin/pm2 start src/index.js --name=node-node-rtmp-hls",
     "stop": "./node_modules/.bin/pm2 stop node-node-rtmp-hls",
-    "start:dev": "./node_modules/.bin/nodemon src/index.js"
+    "start:dev": "yarn build:css && ./node_modules/.bin/nodemon src/index.js"
   }
 }
