--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "./src",
   "license": "MIT",
+  "private": true,
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
@@ -16,12 +17,17 @@
     "path": "^0.12.7",
     "pm2": "^4.2.3",
     "postcss-cli": "^7.1.1",
+    "redis": "^3.0.2",
     "tailwindcss": "^1.6.2"
   },
   "scripts": {
-    "build:css": "postcss public/stylesheets/tailwind.css -o public/stylesheets/style.css",
+    "build:css": "postcss public/css/tailwind.css -o public/css/style.css",
     "start": "./node_modules/.bin/pm2 start src/index.js --name=node-node-rtmp-hls",
     "stop": "./node_modules/.bin/pm2 stop node-node-rtmp-hls",
     "start:dev": "yarn build:css && ./node_modules/.bin/nodemon src/index.js"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.3.0",
+    "cssnano": "^4.1.10"
   }
 }
