--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     volumes:
       - ./src:/app/src
       - ./media:/app/media
+    extra_hosts:
+      - "hostLocal:192.168.1.6"
     ports:
       - 8000:8000
       - 8080:8080
