--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pm2": "^4.2.3",
     "postcss-cli": "^7.1.1",
     "redis": "^3.0.2",
-    "tailwindcss": "^1.6.2"
+    "tailwindcss": "^1.6.2",
+    "videojs-shaka": "^0.4.5"
   },
   "scripts": {
     "build:css": "postcss public/css/tailwind.css -o public/css/style.css",
