--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ PUBLISH_START_NOTIFY_URL=
 
 # URL to notify when a stream stoppes
 PUBLISH_STOP_NOTIFY_URL=
+
+STREAM_HOST=localhost:8080
+
+REDIS_HOST=192.168.1.2
+REDIS_PORT=6379
+
+DATABASE=mongodb://mongodb:27017/playground
