--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-ejs-layouts": "^2.5.0",
     "lodash": "^4.17.15",
     "mkdirp": "^0.5.1",
+    "mongoose": "^5.10.0",
+    "multer": "^1.4.2",
     "node-media-server": "^2.2.2",
     "nodemon": "^2.0.2",
     "path": "^0.12.7",
+    "pify": "^5.0.0",
     "pm2": "^4.2.3",
     "postcss-cli": "^7.1.1",
     "redis": "^3.0.2",
     "tailwindcss": "^1.6.2",
-    "videojs-shaka": "^0.4.5"
+    "videojs-shaka": "^0.4.5",
+    "winston": "^3.3.3"
   },
   "scripts": {
     "build:css": "postcss public/css/tailwind.css -o public/css/style.css",
