--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pify": "^5.0.0",
     "pm2": "^4.2.3",
     "postcss-cli": "^7.1.1",
+    "read-excel-file": "^4.0.7",
     "redis": "^3.0.2",
     "socket.io": "^2.3.0",
     "tailwindcss": "^1.7.2",
